--- a/style.css
+++ b/style.css
@@ -296,46 +296,8 @@ section .title::after {
     content: "Serviços";
 }
 
-.services .serv-content .card {
-    width: calc(33% - 20px);
-    background: #222;
-    text-align: center;
-    border-radius: 6px;
-    padding: 35px 25px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.services .serv-content .card:hover {
-    background: crimson;
-}
-
-.services .serv-content .card .box {
-    transition: all 0.3s ease;
-}
-
-.services .serv-content .card:hover .box {
-    transform: scale(1.05);
-}
-
-.services .serv-content .card i {
-    font-size: 50px;
-    color: crimson;
-    transition: color 0.3s ease;
-}
-
-.services .serv-content .card:hover i {
-    color: #fff;
-}
-
-.services .serv-content .card .text {
-    font-size: 25px;
-    font-weight: 500;
-    margin: 10px 0 7px 0;
-}
-
 .skills .title::after {
-    content: "conhecimentos";
+    content: "fluxograma";
 }
 
 .skills .skills-content .column {
@@ -439,6 +401,15 @@ section .title::after {
     transition: all 0.3s ease;
 }
 
+.services .carousel .card {
+    background: #222;
+    border-radius: 6px;
+    padding: 25px 35px;
+    text-align: center;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
 .teams .carousel .card:hover {
     background: crimson;
 }
@@ -471,6 +442,41 @@ section .title::after {
 }
 
 .teams .carousel .card:hover img {
+    border-color: #fff;
+}
+
+.services .carousel .card:hover {
+    background: crimson;
+}
+
+.services .carousel .card .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.services .carousel .card:hover .box {
+    transform: scale(1.05);
+}
+
+.services .carousel .card .text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
+.services .carousel .card img {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.services .carousel .card:hover img {
     border-color: #fff;
 }
 
@@ -841,10 +847,6 @@ section .title::after {
     .about .about-content .right {
         flex: 100%;
     }
-    .services .serv-content .card {
-        width: calc(50% - 10px);
-        margin-bottom: 20px;
-    }
     .skills .skills-content .column, .contact .contact-content .column {
         width: 100%;
         margin-bottom: 35px;
@@ -863,9 +865,6 @@ section .title::after {
     }
     .home .home-content a {
         font-size: 20px;
-    }
-    .services .serv-content .card {
-        width: 100%;
     }
 }
 
