--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ section .title::after {
 
 .services .title::after, .teams .title::after {
     background: #111;
-    content: "Serviços";
+    content: "Tratamentos";
 }
 
 .skills .title::after {
